# syneroym

./: .gitignore  .rustfmt.toml  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  PERF_SUMMARY.md  README.md  THESIS.md  lib.rs  mise.toml  package.json  pnpm-workspace.yaml  rustfmt.toml  test_select.rs
.cargo/: audit.toml
.claude/: settings.json
.githooks/: pre-commit  pre-commit.sh  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/roymctl/: Cargo.toml
apps/roymctl/src/: commands.rs  main.rs
apps/roymctl/src/commands/: app.rs  identity.rs  registry.rs  security.rs  substrate.rs  svc.rs
apps/roymctl/tests/: cli_args.rs
crates/app_orchestration/: Cargo.toml
crates/app_orchestration/src/: catalog.rs  compiler.rs  journal.rs  lib.rs  models.rs  reconcile.rs  resolver.rs
crates/app_sandbox/: Cargo.toml
crates/app_sandbox/benches/: data_layer_bench.rs  wasm_engine.rs
crates/app_sandbox/src/: conversions.rs  data_layer_convert.rs  engine.rs  lib.rs
crates/app_sandbox/tests/: blob_store_integration.rs  data_layer_integration.rs  lifecycle_hooks.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: blob_store.rs  control_plane.rs  data_layer.rs  host.rs  lib.rs  vault.rs
crates/bindings/wit/: control-plane.wit  data-layer.wit  host.wit
crates/bindings/wit/control-plane/: control-plane.wit
crates/bindings/wit/host/: host.wit
crates/blob-store/: Cargo.toml
crates/blob-store/benches/: blob_bench.rs
crates/blob-store/src/: crypto.rs  errors.rs  lib.rs  native_types.rs  object_store_impl.rs  traits.rs
crates/chunk_transfer/: Cargo.toml
crates/chunk_transfer/src/: lib.rs
crates/client_gateway/: Cargo.toml
crates/client_gateway/src/: gateway.rs  lib.rs
crates/community_registry/: Cargo.toml
crates/community_registry/src/: lib.rs  registry.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: config_utils.rs  control_plane_wit_bindings.rs  dummy_sandbox.rs  http_routes.rs  lib.rs  sandbox.rs  service.rs  synsvc_native.rs  wit_bindings.rs
crates/control_plane/src/service/: orchestration.rs
crates/control_plane/wit/: control-plane.wit
crates/coordinator/: Cargo.toml
crates/coordinator/src/: coordinator.rs  lib.rs
crates/coordinator_iroh/: Cargo.toml
crates/coordinator_iroh/src/: config.rs  coordinator.rs  info_endpoint.rs  lib.rs
crates/coordinator_iroh/tests/: connection_limit.rs  iroh_setup.rs  multi_hop_relay.rs  quic_idle_eviction.rs  tls_rotation.rs
crates/coordinator_webrtc/: Cargo.toml  build.rs
crates/coordinator_webrtc/src/: bootstrap.rs  coordinator.rs  lib.rs  signalling.rs  webrtc_stream.rs
crates/coordinator_webrtc/templates/: peer-proxy.html  peer-proxy.js  sw.js
crates/coordinator_webrtc/tests/: alias_resolution.rs
crates/core/: Cargo.toml
crates/core/src/: community_registry.rs  config.rs  constants.rs  deploy_docs.rs  dht_registry.rs  http_routes.rs  lib.rs  local_registry.rs  protocol_utils.rs  registry.rs  retry.rs  storage.rs  streaming.rs  test_constants.rs  tls.rs  util.rs
crates/data-layer/: Cargo.toml
crates/data-layer/benches/: security_config_bench.rs
crates/data-layer/src/: errors.rs  filter.rs  lib.rs  registry_store.rs  sqlite.rs  tests_crud.rs  traits.rs
crates/data_db/: Cargo.toml
crates/data_db/benches/: fdae_bench.rs  security_config_bench.rs
crates/data_db/src/: aggregate.rs  auth.rs  errors.rs  filter.rs  lib.rs  registry_store.rs  sqlite.rs  tests_crud.rs  tests_fdae.rs  traits.rs
crates/data_keystore/: Cargo.toml
crates/data_keystore/src/: key_store.rs  lib.rs
crates/fdae/: Cargo.toml
crates/fdae/schema/: fdae-v1.json
crates/fdae/src/: compile.rs  lib.rs  policy.rs  trace.rs
crates/identity/: Cargo.toml
crates/identity/benches/: delegation.rs
crates/identity/src/: delegation.rs  document.rs  keys.rs  lib.rs  substrate.rs
crates/key-store/: Cargo.toml
crates/key-store/src/: key_store.rs
crates/mqtt_broker/: Cargo.toml
crates/mqtt_broker/src/: lib.rs  tests.rs
crates/observability/: Cargo.toml
crates/observability/src/: engine.rs  lib.rs  metrics.rs  recorder.rs
crates/podman_sandbox/: Cargo.toml
crates/podman_sandbox/src/: engine.rs
crates/router/: Cargo.toml
crates/router/benches/: crypto.rs  preamble.rs  proxy.rs
crates/router/src/: connection_router.rs  handshake.rs  lib.rs  net_iroh.rs  net_webrtc.rs  preamble.rs  proxy.rs  route_handler.rs  routing.rs  stop_signal.rs  substrate_service.rs
crates/router/src/route_handler/: dispatch.rs  encryption.rs  http.rs  io.rs
crates/router/tests/: deploy_grant.rs  native_dispatch_identity.rs  proxy_dispatch.rs  service_ownership.rs  ucan_context.rs  unsupported_protocol.rs
crates/roymctl/: Cargo.toml
crates/roymctl/src/: main.rs
crates/roymctl/tests/: cli_args.rs  e2e_node_lifecycle.rs
crates/rpc/: Cargo.toml
crates/rpc/benches/: framing.rs
crates/rpc/src/: converter.rs  dispatch_registry.rs  framing.rs  lib.rs  native.rs  proxy.rs  types.rs
crates/sandbox_app/: Cargo.toml
crates/sandbox_app/benches/: data_layer_bench.rs  wasm_engine.rs
crates/sandbox_app/src/: conversions.rs  engine.rs
crates/sandbox_app/tests/: blob_store_integration.rs  data_layer_integration.rs  lifecycle_hooks.rs
crates/sandbox_podman/: Cargo.toml
crates/sandbox_podman/src/: engine.rs  lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs  mapper.rs
crates/sdk/tests/: connect_timeout.rs
crates/smoke-tests/: Cargo.toml
crates/smoke-tests/src/: main.rs
deploy/: docker-compose.community.yml
docs/: ROADMAP.md  STATUS.md  TERMINOLOGY.md  VISION.md  api_examples.md  architecture-multi-hop-relay-flow.md  architecture-multi-hop-relay.md  architecture.md  authorization-engine-spec.md  commitment-network-overview-spec.md  data-and-coordination-layer-spec.md  data-layer-design.md  data-layer-mvp-plan.md  developer-guide.md  developer_guide.md  did-spec-scratch-notes.md  dynamic-ledger-network-overview-spec.md  high-level-requirements.md  immutable-event-journal-spec.md  multi-hop-relay-scenario.md  (+12 more)
(+222 files in other folders)
