[workspace]
resolver = "2"
members = ["crates/*", "apps/*", "test-components/*"]
exclude = ["test-components/greeter"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Syneroym Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/syneroym/syneroym"

[workspace.dependencies]
syneroym-identity = { path = "crates/identity", version = "0.1.0" }

# Networking & Async
tokio = { version = "1.50", features = ["full"] }
hyper = { version = "1.9", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
http-body-util = "0.1"
bytes = "1.10"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
webrtc = "0.11" # Using a slightly older stable version as v0.17 might have breaking changes for this specific codebase
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tls-parser = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "1.0"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Common / Utils
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.12", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dashmap = "6.1"
httparse = "1.10"
async-trait = "0.1"
z32 = "1.3"
ed25519-dalek = "2.2"
hex = "0.4"
chrono = "0.4"
dirs = "6.0"
rusqlite = { version = "0.39", features = ["bundled", "modern-full"] }
sha2 = "0.10"
getrandom = "0.4"
url = "2.5"
rustls-pki-types = "1.10"
rustls = { version = "0.23", features = ["ring"] }
n0-error = "0.1"
thiserror = "2.0"

# Iroh dependencies
iroh-base = "0.97"
iroh = "0.97"
iroh-relay = { version = "0.97", features = ["server"] }

# WASM
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
wit-bindgen = "0.57"

# Test / Dev
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
libc = "0.2"
tokio-tungstenite = "0.29"
futures-util = "0.3"
futures = "0.3"
chromiumoxide = { version = "0.9" }
tokio-stream = "0.1"
