[workspace]
resolver = "2"
members = ["crates/*", "apps/*", "test-components/*"]
exclude = ["test-components/greeter"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Syneroym Contributors"]
license = "Apache-2.0"
repository = "https://github.com/syneroym/syneroym"

[workspace.dependencies]
syneroym-identity = { path = "crates/identity", version = "0.1.0" }

# Networking & Async
tokio = { version = "1.50", features = ["full"] }
hyper = { version = "1.9", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
http-body-util = "0.1"
bytes = "1.10"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["full"] }
webrtc = "0.17" # Using a slightly older stable version as v0.17 might have breaking changes for this specific codebase
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tls-parser = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "1.0"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Common / Utils
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.12", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dashmap = "6.1"
httparse = "1.10"
async-trait = "0.1"
z32 = "1.3"
ed25519-dalek = "2.2"
hex = "0.4"
chrono = "0.4"
dirs = "6.0"
rusqlite = { version = "0.39", features = ["bundled", "modern-full"] }
# TODO: Upgrade sha2 to v0.11 once iroh updates its crates. 
# iroh-base v0.97.0 strictly pins sha2 = "=0.11.0-rc.2", causing resolution 
# conflicts if we attempt to use the stable 0.11 release here.
sha2 = "0.10"
getrandom = "0.4"
url = "2.5"
rustls-pki-types = "1.10"
rustls = { version = "0.23", features = ["ring"] }
n0-error = "0.1"
thiserror = "2.0"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "arithmetic", "ecdsa"] }
rand = "0.9"

# Iroh dependencies
# NOTE: iroh v0.97 pulls in ed25519-dalek v3.0.0-pre.1, which in turn requires
# ed25519 ^3.0.0-rc.0 and pkcs8 ^0.11.0-rc.10 (all pre-release). A plain
# `cargo update` will bump these to their stable releases, which have breaking
# API changes that break the pre-release dalek build. After any `cargo update`,
# run `mise run deps:update` (or the two pinning commands it contains) to
# restore compatible versions. Remove these pins once iroh ships a release
# that depends on stable ed25519-dalek v3.
iroh-base = "0.97"
iroh = "0.97"
iroh-relay = { version = "0.97", features = ["server"] }

# WASM
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
wit-bindgen = "0.57"

# Test / Dev
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
libc = "0.2"
tokio-tungstenite = "0.29"
futures-util = "0.3"
futures = "0.3"
chromiumoxide = { version = "0.9" }
tokio-stream = "0.1"
