[workspace]
resolver = "2"
members = ["crates/*", "apps/*", "test-components/*", "tests/perf", "xtask"]
exclude = [
    "test-components/greeter",
    "test-components/data-layer-test",
    "test-components/messaging-pubsub-test",
    "test-components/stream-test",
    "test-components/proxy-test",
]

[profile.dev]
incremental = true      # Compile your binary in smaller steps.
split-debuginfo = "unpacked" # Keep debug info out-of-line instead of duplicated into each binary; much smaller target/.

[profile.dev.package."*"]
debug = false     # Disable debug symbols for all dependencies

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Syneroym Contributors"]
license = "MPL-2.0 OR LicenseRef-Commercial"
repository = "https://github.com/syneroym/syneroym"

[workspace.dependencies]
# Internal Workspace Crates
syneroym-core = { path = "crates/core" }
syneroym-wit-interfaces = { path = "crates/wit_interfaces" }
syneroym-rpc = { path = "crates/rpc" }
syneroym-identity = { path = "crates/identity" }
syneroym-data-keystore = { path = "crates/data_keystore" }
syneroym-app-orchestration = { path = "crates/app_orchestration" }
syneroym-sandbox-wasm = { path = "crates/sandbox_wasm" }
syneroym-data-db = { path = "crates/data_db" }
syneroym-data-blob = { path = "crates/data_blob" }
syneroym-router = { path = "crates/router" }
syneroym-observability = { path = "crates/observability" }
syneroym-community-registry = { path = "crates/community_registry" }
# Disable default-features here so that individual workspace crates (like syneroym-substrate) can opt out of default features via workspace inheritance.
syneroym-coordinator = { path = "crates/coordinator", default-features = false }
syneroym-client-gateway = { path = "crates/client_gateway" }
syneroym-coordinator-iroh = { path = "crates/coordinator_iroh" }
syneroym-coordinator-webrtc = { path = "crates/coordinator_webrtc" }
syneroym-control-plane = { path = "crates/control_plane" }
syneroym-sandbox-podman = { path = "crates/sandbox_podman" }
syneroym-sdk = { path = "crates/sdk" }
syneroym-smoke-tests = { path = "crates/smoke-tests" }
syneroym-substrate = { path = "crates/substrate" }
syneroym-ucan = { path = "crates/ucan" }
syneroym-fdae = { path = "crates/fdae" }
syneroym-mqtt-broker = { path = "crates/mqtt_broker" }
syneroym-chunk-transfer = { path = "crates/chunk_transfer" }
miniapp-demo1-web = { path = "test-components/miniapp-demo1-web" }

# Networking & Async
tokio = { version = "1.50", features = ["full"] }
hyper = { version = "1.10", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
http-body-util = "0.1"
bytes = "1.10"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["full"] }
webrtc = "0.17" # Using a slightly older stable version as v0.17 might have breaking changes for this specific codebase
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tls-parser = "0.12"
x509-parser = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "1.0"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Common / Utils
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.12", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
metrics = "0.23"
metrics-util = "0.18"
sysinfo = "0.30"
dashmap = "6.1"
httparse = "1.10"
async-trait = "0.1"
z32 = "1.3"
blake3 = "1.8"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
hex = { version = "0.4", features = ["serde"] }
chrono = "0.4"
pkarr = "6.0"
dirs = "6.0"
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "hooks"] }
# TODO: Upgrade sha2 to v0.11 once iroh updates its crates. 
# iroh-base v0.97.0 strictly pins sha2 = "=0.11.0-rc.2", causing resolution 
# conflicts if we attempt to use the stable 0.11 release here.
sha2 = "0.10"
getrandom = "0.4"
url = "2.5"
rustls-pki-types = "1.10"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
n0-error = "0.1"
thiserror = "2.0"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "arithmetic", "ecdsa"] }
rand = "0.9"
semver = "1.0"
deadpool-sqlite = "0.13"
deadpool = "0.13"
regex = "1.10"
jsonschema = { version = "0.46", default-features = false }
hkdf = "0.12"
hmac = "0.12"
aead = "0.5"
# object_store 0.14 bumps its md-5 dependency to require digest ^0.11.0
# (stable), which conflicts with the digest 0.11.0-rc.10 pin below required
# by iroh-base's pre-release ed25519-dalek/pkcs8 chain. 0.13.x is the newest
# line that still resolves; a plain "0.13.1" (not "=0.13.1") stays capped
# below 0.14.0 under Cargo's 0.x caret semantics without needing an exact
# pin. Revisit alongside the iroh pins below once iroh ships a stable
# ed25519-dalek v3 release.
object_store = "0.13.1"

# Iroh dependencies
# NOTE: iroh v0.97 pulls in ed25519-dalek v3.0.0-pre.1, which in turn requires
# ed25519 ^3.0.0-rc.0 and pkcs8 ^0.11.0-rc.10 (all pre-release). A plain
# `cargo update` will bump these to their stable releases, which have breaking
# API changes that break the pre-release dalek build. After any `cargo update`,
# run `mise run deps:update` (or the two pinning commands it contains) to
# restore compatible versions. Remove these pins once iroh ships a release
# that depends on stable ed25519-dalek v3.
iroh-base = "0.97"
iroh = "0.97"
iroh-relay = { version = "0.97", features = ["server"] }

# WASM
wasmtime = { version = "46.0.1", features = ["component-model"] }
wasmtime-wasi = "46.0.1"
wit-bindgen = "0.57"
wit-parser = "0.251"

# Test / Dev
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
libc = "0.2"
zeroize = { version = "1.8", features = ["derive"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
futures = "0.3"
chromiumoxide = { version = "0.9" }
tokio-stream = "0.1"
tokio-util = "0.7"
# Embedded MQTT broker for syneroym:messaging (M3B Slice 6A, ADR-0010).
# 0.20 is the latest published release as of this pin (2026-07-09); no known
# conflicts with other workspace deps yet, pinned per the iroh/sha2/object_store
# convention above so a future `cargo update` doesn't silently drift the
# in-process router API this crate depends on (see crates/mqtt_broker).
# Default features pull in rustls-webpki/rustls-pemfile (vulnerable/unmaintained,
# RUSTSEC-2026-0104/0098/0099/0049, RUSTSEC-2025-0134) and a websocket stack for
# the v4/v5/ws TCP listeners; `MqttBroker` never binds any of those (see
# crates/mqtt_broker doc comment), so they're disabled entirely.
rumqttd = { version = "0.20", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
enum_glob_use = "warn"
rc_buffer = "warn"
