[package]
name = "roymctl"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
syneroym-identity.workspace = true
syneroym-sdk = { path = "../../crates/sdk" }
syneroym-core = { path = "../../crates/core" }
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
