[package]
name = "roymctl"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
syneroym-identity.workspace = true
syneroym-sdk.workspace = true
syneroym-core.workspace = true
syneroym-app-orchestration.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
semver.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
