[package]
name = "syneroym-app-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true, features = ["serde"] }

[dev-dependencies]
