[package]
name = "syneroym-app-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
semver = { workspace = true, features = ["serde"] }
sha2.workspace = true
z32.workspace = true
tokio.workspace = true
async-trait.workspace = true


[dev-dependencies]
tempfile.workspace = true
