[package]
name = "syneroym-app-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
# TODO: Upgrade sha2 to v0.11 once iroh updates its crates. 
# iroh-base v0.97.0 strictly pins sha2 = "=0.11.0-rc.2", causing resolution 
# conflicts if we attempt to use the stable 0.11 release here.
sha2 = "0.10"
hex = "0.4.3"
syneroym-bindings = { path = "../bindings" }
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"
dashmap = "6"
async-trait = "0.1.89"
