[package]
name = "syneroym-app-sandbox"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
syneroym-bindings = { path = "../bindings" }
syneroym-rpc = { path = "../rpc" }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
dashmap.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "wasm_engine"
harness = false
