[package]
name = "syneroym-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
wit-bindgen.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime.workspace = true
