[package]
name = "syneroym-client-gateway"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-sdk.workspace = true
syneroym-rpc.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
dashmap.workspace = true
httparse.workspace = true
