[package]
name = "syneroym-community-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum = "0.8.9"
dashmap = "6.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
z32 = "1.3.0"
ed25519-dalek = "2.2.0"
syneroym-identity.workspace = true
