[package]
name = "syneroym-community-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
z32.workspace = true
ed25519-dalek.workspace = true
syneroym-identity.workspace = true
reqwest = { workspace = true }
