[package]
name = "syneroym-community-registry"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
z32.workspace = true
ed25519-dalek.workspace = true
syneroym-identity.workspace = true
reqwest.workspace = true

[dev-dependencies]
pkarr.workspace = true
hex.workspace = true
