[package]
name = "syneroym-control-plane"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["app_sandbox", "podman_sandbox"]
app_sandbox = ["dep:syneroym-app-sandbox"]
podman_sandbox = ["dep:syneroym-podman-sandbox"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
syneroym-core = { path = "../core" }
syneroym-rpc = { path = "../rpc" }
syneroym-app-sandbox = { path = "../app_sandbox", optional = true }
syneroym-podman-sandbox = { path = "../podman_sandbox", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
syneroym-bindings = { path = "../bindings" }
