[package]
name = "syneroym-control-plane"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["app_sandbox", "podman_sandbox"]
app_sandbox = ["dep:syneroym-app-sandbox"]
podman_sandbox = ["dep:syneroym-podman-sandbox"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
syneroym-core.workspace = true
syneroym-rpc.workspace = true
syneroym-app-sandbox = { workspace = true, optional = true }
syneroym-podman-sandbox = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
syneroym-bindings.workspace = true
syneroym-app-orchestration.workspace = true
syneroym-key-store.workspace = true
syneroym-data-layer.workspace = true
hex.workspace = true
jsonschema.workspace = true

[dev-dependencies]
wit-parser.workspace = true
tempfile.workspace = true
