[package]
name = "syneroym-control-plane"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["app_sandbox", "podman_sandbox"]
app_sandbox = ["dep:syneroym-sandbox-app"]
podman_sandbox = ["dep:syneroym-sandbox-podman"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
syneroym-core.workspace = true
syneroym-rpc.workspace = true
syneroym-sandbox-app = { workspace = true, optional = true }
syneroym-sandbox-podman = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
syneroym-wit-interfaces.workspace = true
syneroym-app-orchestration.workspace = true
syneroym-data-keystore.workspace = true
syneroym-data-db.workspace = true
syneroym-data-blob.workspace = true
hex.workspace = true
jsonschema.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
wit-parser.workspace = true
tempfile.workspace = true
