[package]
name = "syneroym-coordinator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
syneroym-coordinator-iroh = { workspace = true, optional = true }
syneroym-coordinator-webrtc = { workspace = true, optional = true }
tracing.workspace = true

[features]
default = ["iroh", "webrtc"]
iroh = ["dep:syneroym-coordinator-iroh"]
webrtc = ["dep:syneroym-coordinator-webrtc"]
all = ["iroh", "webrtc"]
