[package]
name = "syneroym-coordinator-iroh"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-router.workspace = true
syneroym-identity.workspace = true
syneroym-rpc.workspace = true
anyhow.workspace = true
tokio.workspace = true
iroh-relay.workspace = true
iroh-base.workspace = true
iroh.workspace = true
tracing.workspace = true
url.workspace = true
rustls-pki-types.workspace = true
rustls.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
axum-server.workspace = true
reqwest.workspace = true
rand.workspace = true
async-trait.workspace = true
pkarr.workspace = true
hex.workspace = true
x509-parser.workspace = true
chrono.workspace = true


[dev-dependencies]
iroh.workspace = true
n0-error.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
syneroym-community-registry.workspace = true
syneroym-sdk.workspace = true
syneroym-data-db.workspace = true
syneroym-data-keystore.workspace = true
syneroym-data-blob.workspace = true
syneroym-mqtt-broker.workspace = true
syneroym-sandbox-podman.workspace = true
syneroym-sandbox-wasm.workspace = true
syneroym-control-plane.workspace = true
syneroym-wit-interfaces.workspace = true
dashmap.workspace = true
libc.workspace = true
