[package]
name = "syneroym-coordinator-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
syneroym-core = { path = "../core" }
syneroym-router = { path = "../router" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
askama.workspace = true
askama_axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
tls-parser.workspace = true
iroh.workspace = true
bytes.workspace = true
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
httparse.workspace = true
