[package]
name = "syneroym-coordinator-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
syneroym-core = { path = "../core" }
syneroym-router = { path = "../router" }
syneroym-identity = { path = "../identity" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
http = "1.1"
askama.workspace = true
askama_axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
tls-parser.workspace = true
iroh.workspace = true
bytes.workspace = true
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
httparse.workspace = true
z32.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
