[package]
name = "syneroym-coordinator-webrtc"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-data-layer.workspace = true
syneroym-router.workspace = true
syneroym-identity.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
http = "1.1"
askama.workspace = true
askama_axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
tls-parser.workspace = true
iroh.workspace = true
bytes.workspace = true
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
httparse.workspace = true
z32.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
flate2 = "1.1.9"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tempfile.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
swc_core = { version = "68.0.5", features = [
    "common",
    "ecma_parser",
    "ecma_codegen",
    "ecma_minifier",
    "ecma_visit",
    "ecma_ast",
    "ecma_transforms",
] }
