[package]
name = "syneroym-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
dirs.workspace = true
dashmap.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
async-trait.workspace = true
sha2.workspace = true
z32.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
test-utils = []
