[package]
name = "syneroym-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
dirs.workspace = true
dashmap.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
async-trait.workspace = true
sha2.workspace = true
z32.workspace = true
httparse.workspace = true
tls-parser.workspace = true
reqwest.workspace = true
url.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
syneroym-identity.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
test-utils = []
