[package]
name = "syneroym-data-layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-bindings.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
