[package]
name = "syneroym-data-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-wit-interfaces.workspace = true
syneroym-data-keystore.workspace = true
syneroym-fdae.workspace = true
syneroym-ucan.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
deadpool-sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
aes-gcm.workspace = true
regex.workspace = true
chrono.workspace = true
hex.workspace = true
zeroize.workspace = true
deadpool.workspace = true

[features]
default = ["syneroym-oltp"]
syneroym-oltp = []
syneroym-olap = []

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
criterion.workspace = true
hkdf.workspace = true
sha2.workspace = true

[[bench]]
name = "security_config_bench"
harness = false

[lints]
workspace = true
