[package]
name = "syneroym-data-keystore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syneroym-identity.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
rand.workspace = true
rusqlite.workspace = true
sha2.workspace = true
zeroize.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
