[package]
name = "syneroym-fdae"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-ucan.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rusqlite.workspace = true
jsonschema.workspace = true
thiserror.workspace = true
tracing.workspace = true
