[package]
name = "syneroym-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2.2.0" }
hex = "0.4.3"
getrandom = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
z32 = "1"
