[package]
name = "syneroym-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
z32.workspace = true
chrono.workspace = true
