[package]
name = "syneroym-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
getrandom.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
z32.workspace = true
chrono.workspace = true
zeroize = { workspace = true, features = ["derive"] }
libc.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "delegation"
harness = false
